<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.com.githu.zik.client.api</groupId>
	<artifactId>ZikBot-client</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>13</release>
					<compilerArgs>
						--enable-preview
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<artifactId>socket-engine</artifactId>
			<groupId>br.com.github.puti.engine.socket</groupId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub sorputi Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/sorputi/ZikBot-client-java</url>
		</repository>
	</distributionManagement>
</project>
